--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Sickest workout competition app ever 9000",
   "main": "index.js",
   "scripts": {
+    "start": "tsc && nodemon dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +16,24 @@
   "bugs": {
     "url": "https://github.com/tylersayvetz/pushup-app-backend/issues"
   },
-  "homepage": "https://github.com/tylersayvetz/pushup-app-backend#readme"
+  "homepage": "https://github.com/tylersayvetz/pushup-app-backend#readme",
+  "dependencies": {
+    "@types/express": "^4.17.9",
+    "@types/koa": "^2.11.6",
+    "@types/koa-json": "^2.0.18",
+    "@types/koa-jwt": "^3.3.0",
+    "@types/koa-logger": "^3.1.1",
+    "@types/koa-router": "^7.4.1",
+    "@types/nedb": "^1.8.11",
+    "express": "^4.17.1",
+    "koa": "^2.13.0",
+    "koa-bodyparser": "^4.3.0",
+    "koa-json": "^2.0.2",
+    "koa-jwt": "^4.0.0",
+    "koa-logger": "^3.2.1",
+    "koa-router": "^10.0.0",
+    "nedb": "^1.8.0",
+    "nedb-promises": "^4.1.0",
+    "typescript": "^4.1.2"
+  }
 }
