--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Sickest workout competition app ever 9000",
   "main": "index.js",
   "scripts": {
-    "start": "tsc && nodemon dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npx tsc && nodemon dist/server/index.js",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -17,16 +17,39 @@
     "url": "https://github.com/tylersayvetz/pushup-app-backend/issues"
   },
   "homepage": "https://github.com/tylersayvetz/pushup-app-backend#readme",
+  "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.9.1",
+    "@typescript-eslint/parser": "^4.9.1",
+    "eslint": "^7.15.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-airbnb-typescript": "^12.0.0",
+    "eslint-config-prettier": "^7.0.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.2.0",
+    "prettier": "^2.2.1",
+    "typescript": "^4.1.2"
+  },
   "dependencies": {
+    "@koa/router": "^10.0.0",
+    "@types/config": "0.0.37",
     "@types/express": "^4.17.9",
+    "@types/jest": "^26.0.16",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/koa": "^2.11.6",
     "@types/koa-json": "^2.0.18",
     "@types/koa-jwt": "^3.3.0",
     "@types/koa-logger": "^3.1.1",
     "@types/koa-router": "^7.4.1",
     "@types/nedb": "^1.8.11",
+    "@types/supertest": "^2.0.10",
+    "config": "^3.3.3",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jest": "^26.6.3",
+    "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.0",
+    "koa-body": "^4.2.0",
     "koa-bodyparser": "^4.3.0",
     "koa-json": "^2.0.2",
     "koa-jwt": "^4.0.0",
@@ -34,6 +57,10 @@
     "koa-router": "^10.0.0",
     "nedb": "^1.8.0",
     "nedb-promises": "^4.1.0",
+    "prettier": "^2.2.1",
+    "supertest": "^6.0.1",
+    "ts-jest": "^26.4.4",
+    "ts-node": "^9.1.1",
     "typescript": "^4.1.2"
   }
 }
